feat: replace ContactMain with Whoami component and remove unused files

--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -4,14 +4,15 @@
 // Import the layout and any other needed components
 ---
 
-<div class="main-content">
-    <!-- Place your main content here -->
-    <!-- <h1>Welcome!</h1>
-    <p>This is the main area of the page where content will be displayed.</p> -->
+<div class="whoami">
+    <p>daniele@dagnelli.net:~$ whoami</p>
+    <p>i grew up and studied in the south of italy. </p>
+    <p>daniele@dagnelli.net:~$ whoami</p>
+
 </div>
 
 <style>
-    .main-content {
+    .whoami {
         flex: 1; /* Takes up the rest of the space */
         padding: 1em; /* Add padding around the content */
         margin-top: 1em;
