--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,9 @@ import { siteMetadata } from "../siteMetadata";
     .container {
         display: flex;
         justify-content: left;
-        align-items: stretch;
-        height: 100vh;
+        gap: 1em;
+        padding: 1em;
+        height: calc(100% - 2em);
+        min-height: 400px;
     }
 </style>
