--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,8 @@ import { siteMetadata } from "../siteMetadata";
     <div class="container">
         <ContactSidebar />
         <Whoami />
-    </div>
+        <!-- This is where we'll render the typed command -->
+        
 </Main>
 
 <style>
