--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,5 @@
 ---
 // import ThemeToggler from "./ThemeToggler.astro";
-
-
 ---
 
 <nav>
@@ -9,6 +7,8 @@
         <li><a href="/home">Home</a></li>
         <!-- <li><a href="/bio">Bio</a></li>
         <li><a href="/blog">Blog</a></li> -->
+        <li><a href="/#">Books</a></li>
+
         <li><a href="/contact">Contact</a></li>
 
         <!-- <li><a href="/resume">resume</a></li> -->
@@ -16,8 +16,7 @@
 </nav>
 
 <style>
-   
-nav {
+    nav {
         display: flex;
         justify-content: center; /* Center the navigation links */
         align-items: center; /* Align items vertically */
