--- a/src/components/Whoami.astro
+++ b/src/components/Whoami.astro
@@ -5,22 +5,40 @@ import { siteMetadata } from "../siteMetadata";
 const timeout = siteMetadata.config.matrixEffect.timeout;
 ---
 
-
-
-
 <div class="whoami">
-    <div class="command-content-pair" data-command="whoami"data-delay={timeout + 1000}>
-        <p>daniele@dagnelli.net:~$ <span class="typewriter"></span><span class="cursor">|</span></p>
+    <div
+        class="command-content-pair"
+        data-command="whoami"
+        data-delay={timeout + 1000}
+    >
+        <p>
+            daniele@dagnelli.net:~$ <span class="typewriter"></span><span
+                class="cursor">|</span>
+        </p>
         <p class="content" style="display: none;">
             I grew up and studied in the south of Italy. Since then, many other
             things have happened. I will write about them when I get the chance.
         </p>
     </div>
 
-    <div class="command-content-pair" data-command="" data-delay={timeout + 500} style="display: none;">
-        <p>daniele@dagnelli.net:~$ <span class="typewriter"></span><span class="cursor">|</span></p>
-        <p class="content" style="display: none;">
-            
+    <div
+        class="command-content-pair"
+        data-command=""
+        data-delay={timeout + 500}
+        style="display: none;"
+    >
+        <p>
+            daniele@dagnelli.net:~$ <span class="typewriter"></span><span
+                class="cursor">|</span>
+        </p>
+        <p class="content" style="display: none;"></p>
+    </div>
+
+    <div id="typedCommand" style="display: none;">
+        <p>
+            daniele@dagnelli.net:~$ <span class="typed-output"></span><span
+                class="cursor">|</span
+            >
         </p>
     </div>
 </div>
@@ -48,8 +66,13 @@ const timeout = siteMetadata.config.matrixEffect.timeout;
     }
 
     @keyframes blink {
-        0%, 100% { opacity: 1; }
-        50% { opacity: 0; }
+        0%,
+        100% {
+            opacity: 1;
+        }
+        50% {
+            opacity: 0;
+        }
     }
 </style>
 
@@ -57,7 +80,11 @@ const timeout = siteMetadata.config.matrixEffect.timeout;
     const speed = 100; // Typing speed in milliseconds
     let pairIndex = 0;
 
-    function typeWriter(element: Element | null, text: string | null, callback: { (): void; (): void; }) {
+    function typeWriter(
+        element: Element | null,
+        text: string | null,
+        callback: { (): void; (): void },
+    ) {
         let index = 0;
         const cursor = element ? element.nextElementSibling : null;
 
@@ -69,7 +96,7 @@ const timeout = siteMetadata.config.matrixEffect.timeout;
                 index++;
                 setTimeout(type, speed);
             } else {
-                if (cursor && cursor.classList.contains('cursor')) {
+                if (cursor && cursor.classList.contains("cursor")) {
                     cursor.remove();
                 }
                 callback(); // Call the callback after typing finishes
@@ -98,7 +125,8 @@ const timeout = siteMetadata.config.matrixEffect.timeout;
 
                     // Reveal the next command-content pair
                     if (pairIndex < pairs.length) {
-                        (pairs[pairIndex] as HTMLElement).style.display = "block";
+                        (pairs[pairIndex] as HTMLElement).style.display =
+                            "block";
                     }
 
                     processNextPair(); // Process the next pair
